--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -7,8 +7,9 @@
     <title>Fork</title>
     <base href="/"/>
     <link href="css/app.min.css" rel="stylesheet"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="lib/clusterizejs/clusterize.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Roboto+Mono&display=swap"
           rel="stylesheet">
 </head>
@@ -17,7 +18,7 @@
 <div id="app">
     <div class="w-screen h-screen flex justify-center items-center bg-forkBlue-dark flex-col">
         <h1 class="text-label text-lg">Loading</h1>
-        <img style="width: 116px; height: 122px" src="ressources/img/loading.gif"/>
+        <img src="ressources/img/loading.gif" style="width: 116px; height: 122px"/>
     </div>
 </div>
 
@@ -27,6 +28,7 @@
     <a class="dismiss">🗙</a>
 </div>
 <script src="js/app.js"></script>
+<script src="lib/clusterizejs/clusterize.js"></script>
 <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
